Renderização Via API

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="icon" type="image/png" href="../style/imagens/Logo3.png">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="icon" type="image/png" href="../static/Logo3.png">
 </head>
 <body class="Home">
     <div id="particles-js"></div>
     <div class="navbarHome">
         <div class="navbar-left">
             <!-- <span>Logo</span> -->
-            <img src="../style/imagens/Logo3.png" alt="Logo" class="logoHome">
+            <img src="../static/Logo3.png" alt="Logo" class="logoHome">
         </div>
         <div class="navbar-right">
             <a href="home.html" class="linkHome">Home</a>
@@ -62,15 +62,15 @@
         <p id="informativo">Links <span id="espaco"></span> utéis:</p>
     </div>
     <div class="containerLinks">
-        <a href="https://github.com/" class="linksUteis"><img src="../style/imagens/Github.png" alt="Github" id="Github"></a>
-        <a href="https://web.postman.co/" class="linksUteis"><img src="../style/imagens/Postman.png" alt="Postman" id="Postman"></a>
-        <a href="https://app.powerbi.com/" class="linksUteis"><img src="../style/imagens/PowerBi.png" alt="PowerBI" id="PowerBi"></a>
-        <a href="https://www.brain.fm/" class="linksUteis"><img src="../style/imagens/Musica.png" alt="Musica" id="Musica"></a>
-        <a href="https://teams.microsoft.com/v2/" class="linksUteis"><img src="../style/imagens/Teams.png" alt="Teams" id="Teams"></a>
-        <a href="https://devdocs.io/" class="linksUteis"><img src="../style/imagens/Documentação.png" alt="Documentação" id="Documentacao"></a>
+        <a href="https://github.com/" class="linksUteis"><img src="../static/Github.png" alt="Github" id="Github"></a>
+        <a href="https://web.postman.co/" class="linksUteis"><img src="../static/Postman.png" alt="Postman" id="Postman"></a>
+        <a href="https://app.powerbi.com/" class="linksUteis"><img src="../static/PowerBi.png" alt="PowerBI" id="PowerBi"></a>
+        <a href="https://www.brain.fm/" class="linksUteis"><img src="../static/Musica.png" alt="Musica" id="Musica"></a>
+        <a href="https://teams.microsoft.com/v2/" class="linksUteis"><img src="../static/Teams.png" alt="Teams" id="Teams"></a>
+        <a href="https://devdocs.io/" class="linksUteis"><img src="../static/Documentação.png" alt="Documentação" id="Documentacao"></a>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script src="../style/particles.js"></script>
-<script src="../style/movimento.js"></script>
+<script src="../static/particles.js"></script>
+<script src="../static/movimento.js"></script>
 </body>
 </html>
