--- a/templates/atividades.html
+++ b/templates/atividades.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividades</title>
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="icon" type="png" href="../style/imagens/Logo3.png" >
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="icon" type="png" href="../static/Logo3.png" >
 </head>
 <body class="Atividades">
     <div id="particles-js"></div>
     <div class="navbar">
         <div class="logoContainer">
-            <img src="../style/imagens/Logo3.png" alt="Logo" class="logoHome">
+            <img src="../static/Logo3.png" alt="Logo" class="logoHome">
         </div>
         <div class="linksContainer">
             <a class="linksAtividades" href="home.html">Home</a>
@@ -39,7 +39,7 @@
     </div>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="..//style/particles.js"></script>
-<script src="../style/movimento.js"></script>
+<script src="..//static/particles.js"></script>
+<script src="../static/movimento.js"></script>
 </body>
 </html>
