--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body class="paginaCadastro">
     <div id="particles-js"></div>
@@ -21,7 +21,7 @@
         <a class="link" href="verificação.html">Login</a>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script src="../style/particles.js"></script>
+<script src="../static/particles.js"></script>
 <script>
     // identifica o botão de cadastro
     const botao = document.getElementById('botao');
