Adição de APi para as páginas

--- a/templates/atividades.html
+++ b/templates/atividades.html
@@ -14,9 +14,9 @@
             <img src="../static/Logo3.png" alt="Logo" class="logoHome">
         </div>
         <div class="linksContainer">
-            <a class="linksAtividades" href="home.html">Home</a>
-            <a class="linksAtividades" href="Atividades.html">Atividades</a>
-            <a class="linksAtividades" href="verificação.html">Login</a>
+            <a class="linksAtividades" href="/home">Home</a>
+            <a class="linksAtividades" href="/atividades">Atividades</a>
+            <a class="linksAtividades" href="/login1">Login</a>
         </div>
     </div>
     <div>
