--- a/templates/home.html
+++ b/templates/home.html
@@ -15,9 +15,9 @@
             <img src="../static/Logo3.png" alt="Logo" class="logoHome">
         </div>
         <div class="navbar-right">
-            <a href="home.html" class="linkHome">Home</a>
-            <a href="atividades.html" class="linkHome">Atividades</a>
-            <a href="verificação.html" class="linkHome">Login</a>
+            <a href="/home" class="linkHome">Home</a>
+            <a href="/atividades" class="linkHome">Atividades</a>
+            <a href="/login1" class="linkHome">Login</a>
         </div>
     </div>
     <div class="tituloHome">
