--- a/templates/verificação.html
+++ b/templates/verificação.html
@@ -12,7 +12,7 @@
         <input class="entrada" type="email" id="email" placeholder="Digite seu email" required>
         <input class="entrada" type="password" id="senha" placeholder="Digite sua senha" required>
         <p class="Paragrafo">Não tem cadastro?</p>
-        <a href="cadastro.html" class="link">Cadastrar-se</a>
+        <a href="/cadastro" class="link">Cadastrar-se</a>
         <button type="submit" id="login">Verificar</button>
     </div>
     <script>
