--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -18,7 +18,7 @@
             <button class="loginCadastro" type="submit" id="botao">Cadastrar</button>
         </form>
         <p class="Paragrafo">Já tem cadastro?</p>
-        <a class="link" href="verificação.html">Login</a>
+        <a class="link" href="/login1">Login</a>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="../static/particles.js"></script>
