--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -23,39 +23,48 @@
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="../static/particles.js"></script>
 <script>
+    // ------------ Api -----------------//
+    // -------- Cadastro -----------//
     // identifica o botão de cadastro
-    const botao = document.getElementById('botao');
+    const botao = document.getElementById("botao");
 
-    botao.addEventListener('click', () => {
-        // Pega o valor do campo de texto com o id 'nome', nesse caso seria o input de feito pelo usuário
-        const nome = document.getElementById('nome').value;
-        const email = document.getElementById('email').value;
-        const idade = document.getElementById('idade').value;
-        const senha = document.getElementById('senha').value;
-        
-        // Envia a requisição POST para a API
-        fetch('http://127.0.0.1:5000/cadastro', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ nome: nome, email: email, idade: idade, senha: senha }) // Envia o nome, email e senha como JSON no corpo da requisição
+    botao.addEventListener("click", () => {
+    // Pega o valor do campo de texto com o id 'nome', nesse caso seria o input de feito pelo usuário
+    const nome = document.getElementById("nome").value;
+    const email = document.getElementById("email").value;
+    const idade = document.getElementById("idade").value;
+    const senha = document.getElementById("senha").value;
+
+    // Envia a requisição POST para a API
+    fetch("http://127.0.0.1:5000/cadastro", {
+        method: "POST",
+        headers: {
+        "Content-Type": "application/json",
+        "Authorization": localStorage.getItem("token"), // Adiciona o token de autenticação no cabeçalho
+        },
+        body: JSON.stringify({
+        nome: nome,
+        email: email,
+        idade: idade,
+        senha: senha,
+        }), // Envia o nome, email e senha como JSON no corpo da requisição
+    })
+        .then((response) => response.json()) // Converte a resposta da API para JSON
+        .then((data) => {
+        // Verifica se a resposta da API foi de sucesso
+        if (data.status === "success") {
+            localStorage.setItem("token", response.token);
+            // Se o status for sucesso, redireciona para a URL fornecida pela API
+            window.location.href = data.redirect_to; // Redireciona usando a URL fornecida pela API
+        } else {
+            // Caso contrário, exibe a mensagem de erro
+            alert(data.message); // Exibe a mensagem de erro
+        }
         })
-        .then(response => response.json()) // Converte a resposta da API para JSON
-        .then(data => {
-            // Verifica se a resposta da API foi de sucesso
-            if (data.status === 'success') {
-                // Se o status for sucesso, redireciona para a URL fornecida pela API
-                window.location.href = data.redirect_to; // Redireciona usando a URL fornecida pela API
-            } else {
-                // Caso contrário, exibe a mensagem de erro
-                alert(data.message); // Exibe a mensagem de erro
-            }
-        })
-        .catch(error => {
-            // Se ocorrer um erro na requisição, exibe no console
-            console.error('Erro:', error); 
-            alert('Erro ao realizar a verificação. Tente novamente.');
+        .catch((error) => {
+        // Se ocorrer um erro na requisição, exibe no console
+        console.error("Erro:", error);
+        alert("Erro ao realizar a verificação. Tente novamente.");
         });
     });
 </script>
