--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -36,7 +36,7 @@
     const senha = document.getElementById("senha").value;
 
     // Envia a requisição POST para a API
-    fetch("http://127.0.0.1:5000/cadastro", {
+    fetch("http://127.0.0.1:5000/cadastro_usuario", {
         method: "POST",
         headers: {
         "Content-Type": "application/json",
