--- a/templates/verificação.html
+++ b/templates/verificação.html
@@ -28,7 +28,7 @@
     const senha = document.getElementById("senha").value;
 
     // Envia a requisição POST para a API
-    fetch("http://127.0.0.1:5000/verificar_dados", {
+    fetch("https://projeto-full-stack-d2gi.onrender.com/verificar_dados", {
         method: "POST",
         headers: {
         "Content-Type": "application/json",
