--- a/templates/verificação.html
+++ b/templates/verificação.html
@@ -40,7 +40,7 @@
         .then((data) => {
         // Verifica se a resposta da API foi de sucesso
         if (data.status === "success") {
-            localStorage.setItem("token", data.token);
+            // localStorage.setItem("token", data.token);
             // Se o status for sucesso, redireciona para a URL fornecida pela API
             window.location.href = data.redirect_to; // Redireciona usando a URL fornecida pela API
         } else {
